[package]
name = "markdown-to-html"
version = "0.1.0"
edition = "2021"
description = "KAMI plugin — convert Markdown to HTML with GFM extensions"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { git = "https://github.com/Hypijump31/KAMI.git", tag = "v0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.11"

wit-bindgen = "0.51"